bootstrap/src/parse/lex_conf.cc
/* Generated by re2c 2.2 on Sat Oct 30 11:21:34 2021 */
#line 1 "../src/parse/lex_conf.re"
#include "src/util/c99_stdint.h"
#include <string>

#include "src/encoding/enc.h"
#include "src/msg/msg.h"
#include "src/options/opt.h"
#include "src/parse/ast.h"
#include "src/parse/scanner.h"
#include "src/util/file_utils.h"
#include "src/util/s_to_n32_unsafe.h"
#include "src/util/string_utils.h"


namespace re2c {

#define YYFILL(n) do { if (!fill(n)) { error("unexpected end of input"); exit(1); }} while(0)

// global re2c config (affects the whole file)
#line 39 "../src/parse/lex_conf.re"


void Scanner::lex_conf(Opt &opts)
{
    tok = cur;

#line 29 "src/parse/lex_conf.cc"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,  64,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		 64,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,  32,   0,   0, 
		160, 160, 160, 160, 160, 160, 160, 160, 
		160, 160,  32,   0,   0,   0,   0,   0, 
		  0,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,   0,   0,   0,   0,  32, 
		  0,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,  32,  32,  32,  32,  32, 
		 32,  32,  32,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	if ((lim - cur) < 28) YYFILL(28);
	yych = (unsigned char)*cur;
	switch (yych) {
	case '-':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'b':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 'u':
	case 'w':
	case 'x':
	case 'z':	goto yy3;
	case 'a':	goto yy5;
	case 'c':	goto yy6;
	case 'd':	goto yy7;
	case 'e':	goto yy8;
	case 'f':	goto yy9;
	case 'i':	goto yy10;
	case 'l':	goto yy11;
	case 's':	goto yy12;
	case 't':	goto yy13;
	case 'v':	goto yy14;
	case 'y':	goto yy15;
	default:	goto yy2;
	}
yy2:
#line 192 "../src/parse/lex_conf.re"
	{
        msg.error(tok_loc(), "unrecognized configuration '%.*s'",
            static_cast<int>(cur - tok), tok);
        exit(1);
    }
#line 144 "src/parse/lex_conf.cc"
yy3:
	++cur;
	if (lim <= cur) YYFILL(1);
	yych = (unsigned char)*cur;
yy4:
	if (yybm[0+yych] & 32) {
		goto yy3;
	}
	goto yy2;
yy5:
	yych = (unsigned char)*++cur;
	if (yych == 'p') goto yy16;
	goto yy4;
yy6:
	yych = (unsigned char)*++cur;
	if (yych == 'g') goto yy17;
	if (yych == 'o') goto yy18;
	goto yy4;
yy7:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy19;
	goto yy4;
yy8:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy20;
	goto yy4;
yy9:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy21;
	goto yy4;
yy10:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy22;
	goto yy4;
yy11:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy23;
	goto yy4;
yy12:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy24;
	if (yych == 't') goto yy25;
	goto yy4;
yy13:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy26;
	goto yy4;
yy14:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy27;
	goto yy4;
yy15:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy28;
	goto yy4;
yy16:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy29;
	goto yy4;
yy17:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy30;
	goto yy4;
yy18:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy31;
	goto yy4;
yy19:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy32;
	goto yy4;
yy20:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy33;
	goto yy4;
yy21:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy35;
	goto yy4;
yy22:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy36;
	goto yy4;
yy23:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy37;
	goto yy4;
yy24:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy38;
	goto yy4;
yy25:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy39;
	goto yy4;
yy26:
	yych = (unsigned char)*++cur;
	if (yych == 'g') goto yy40;
	goto yy4;
yy27:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy41;
	goto yy4;
yy28:
	yych = (unsigned char)*++cur;
	if (yych <= 'c') {
		if (yych <= 'a') goto yy4;
		if (yych <= 'b') goto yy42;
		goto yy43;
	} else {
		if (yych == 'f') goto yy44;
		goto yy4;
	}
yy29:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy45;
	goto yy4;
yy30:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy46;
	goto yy4;
yy31:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy47;
	goto yy4;
yy32:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy48;
	goto yy4;
yy33:
	yych = (unsigned char)*++cur;
	if (yybm[0+yych] & 32) {
		goto yy3;
	}
#line 81 "../src/parse/lex_conf.re"
	{ opts.set_eof     (lex_conf_eof()); return; }
#line 281 "src/parse/lex_conf.cc"
yy35:
	yych = (unsigned char)*++cur;
	if (yych == 'g') goto yy49;
	goto yy4;
yy36:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy50;
	goto yy4;
yy37:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy51;
	goto yy4;
yy38:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy52;
	goto yy4;
yy39:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy53;
	if (yych == 't') goto yy54;
	goto yy4;
yy40:
	yych = (unsigned char)*++cur;
	if (yych == 's') goto yy55;
	goto yy4;
yy41:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy56;
	goto yy4;
yy42:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy57;
	goto yy4;
yy43:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy58;
	goto yy4;
yy44:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy59;
	goto yy4;
yy45:
	yych = (unsigned char)*++cur;
	if (yych == 's') goto yy60;
	goto yy4;
yy46:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy61;
	goto yy4;
yy47:
	yych = (unsigned char)*++cur;
	if (yych <= 'd') {
		if (yych == ':') goto yy62;
		goto yy4;
	} else {
		if (yych <= 'e') goto yy63;
		if (yych == 'p') goto yy64;
		goto yy4;
	}
yy48:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy65;
	goto yy4;
yy49:
	yych = (unsigned char)*++cur;
	if (yych == 's') goto yy66;
	goto yy4;
yy50:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy67;
	goto yy4;
yy51:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy68;
	goto yy4;
yy52:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy69;
	goto yy4;
yy53:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy70;
	goto yy4;
yy54:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy71;
	goto yy4;
yy55:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy72;
	goto yy4;
yy56:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy73;
	goto yy4;
yy57:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy74;
	goto yy4;
yy58:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy75;
	goto yy4;
yy59:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy76;
	goto yy4;
yy60:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy77;
	if (yych == 't') goto yy78;
	goto yy4;
yy61:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy79;
	goto yy4;
yy62:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy80;
	if (yych == 'g') goto yy81;
	goto yy4;
yy63:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy82;
	goto yy4;
yy64:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy83;
	goto yy4;
yy65:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy84;
	goto yy4;
yy66:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy85;
	goto yy4;
yy67:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy86;
	goto yy4;
yy68:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy87;
	if (yych == 'p') goto yy88;
	goto yy4;
yy69:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy89;
	goto yy4;
yy70:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy90;
	goto yy4;
yy71:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy91;
	goto yy4;
yy72:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy92;
	if (yych == 'p') goto yy93;
	goto yy4;
yy73:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy94;
	goto yy4;
yy74:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy95;
	goto yy4;
yy75:
	yych = (unsigned char)*++cur;
	if (yych == 'c') goto yy96;
	if (yych == 'e') goto yy97;
	goto yy4;
yy76:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy98;
	goto yy4;
yy77:
	yych = (unsigned char)*++cur;
	if (yych == 'g') goto yy99;
	goto yy4;
yy78:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy100;
	goto yy4;
yy79:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy101;
	goto yy4;
yy80:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy102;
	goto yy4;
yy81:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy103;
	goto yy4;
yy82:
	yych = (unsigned char)*++cur;
	if (yych == 'u') goto yy104;
	goto yy4;
yy83:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy105;
	goto yy4;
yy84:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy106;
	goto yy4;
yy85:
	yych = (unsigned char)*++cur;
	switch (yych) {
	case '8':	goto yy107;
	case 'P':	goto yy109;
	case 'T':	goto yy111;
	case 'b':	goto yy113;
	case 'c':	goto yy115;
	case 'd':	goto yy116;
	case 'e':	goto yy118;
	case 'g':	goto yy120;
	case 'i':	goto yy122;
	case 'l':	goto yy124;
	case 'n':	goto yy125;
	case 'p':	goto yy126;
	case 's':	goto yy127;
	case 't':	goto yy129;
	case 'u':	goto yy131;
	case 'w':	goto yy133;
	case 'x':	goto yy135;
	default:	goto yy4;
	}
yy86:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy137;
	goto yy4;
yy87:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy138;
	goto yy4;
yy88:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy139;
	goto yy4;
yy89:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy140;
	goto yy4;
yy90:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy141;
	goto yy4;
yy91:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy142;
	if (yych == 'n') goto yy143;
	goto yy4;
yy92:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy144;
	goto yy4;
yy93:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy145;
	goto yy4;
yy94:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy146;
	goto yy4;
yy95:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy147;
	goto yy4;
yy96:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy148;
	goto yy4;
yy97:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy149;
	goto yy4;
yy98:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy150;
	goto yy4;
yy99:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy151;
	goto yy4;
yy100:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy152;
	goto yy4;
yy101:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy153;
	goto yy4;
yy102:
	yych = (unsigned char)*++cur;
	if (yych == 'v') goto yy154;
	goto yy4;
yy103:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy155;
	goto yy4;
yy104:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy156;
	goto yy4;
yy105:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy157;
	goto yy4;
yy106:
	yych = (unsigned char)*++cur;
	if (yych == 'Y') goto yy158;
	goto yy4;
yy107:
	yych = (unsigned char)*++cur;
	if (yybm[0+yych] & 32) {
		goto yy3;
	}
#line 75 "../src/parse/lex_conf.re"
	{ lex_conf_enc(Enc::UTF8, opts);   return; }
#line 608 "src/parse/lex_conf.cc"
yy109:
	yych = (unsigned char)*++cur;
	if (yybm[0+yych] & 32) {
		goto yy3;
	}
#line 64 "../src/parse/lex_conf.re"
	{
        bool b = lex_conf_bool();
        opts.set_posix_syntax(b);
        opts.set_posix_semantics(b);
        return;
    }
#line 621 "src/parse/lex_conf.cc"
yy111:
	yych = (unsigned char)*++cur;
	if (yybm[0+yych] & 32) {
		goto yy3;
	}
#line 49 "../src/parse/lex_conf.re"
	{ opts.set_tags             (lex_conf_bool());   return; }
#line 629 "src/parse/lex_conf.cc"
yy113:
	yych = (unsigned char)*++cur;
	if (yych <= 'Z') {
		if (yych <= '/') {
			if (yych == '-') goto yy3;
		} else {
			if (yych <= ':') goto yy3;
			if (yych >= 'A') goto yy3;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy3;
		} else {
			if (yych == 'i') goto yy159;
			if (yych <= 'z') goto yy3;
		}
	}
yy114:
#line 45 "../src/parse/lex_conf.re"
	{ opts.set_bFlag            (lex_conf_bool());   return; }
#line 650 "src/parse/lex_conf.cc"
yy115:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy160;
	if (yych == 'o') goto yy161;
	goto yy4;
yy116:
	yych = (unsigned char)*++cur;
	if (yych <= 'Z') {
		if (yych <= '/') {
			if (yych == '-') goto yy3;
		} else {
			if (yych <= ':') goto yy3;
			if (yych >= 'A') goto yy3;
		}
	} else {
		if (yych <= '`') {
			if (yych == '_') goto yy3;
		} else {
			if (yych == 'e') goto yy162;
			if (yych <= 'z') goto yy3;
		}
	}
yy117:
#line 46 "../src/parse/lex_conf.re"
	{ opts.set_dFlag            (lex_conf_bool());   return; }
#line 676 "src/parse/lex_conf.cc"
yy118:
	yych = (unsigned char)*++cur;
	if (yych <= '_') {
		if (yych <= ':') {
			if (yych == '-') goto yy3;
			if (yych >= '0') goto yy3;
		} else {
			if (yych <= '@') goto yy119;
			if (yych <= 'Z') goto yy3;
			if (yych >= '_') goto yy3;
		}
	} else {
		if (yych <= 'l') {
			if (yych <= '`') goto yy119;
			if (yych == 'c') goto yy163;
			goto yy3;
		} else {
			if (yych <= 'm') goto yy164;
			if (yych <= 'n') goto yy165;
			if (yych <= 'z') goto yy3;
		}
	}
yy119:
#line 71 "../src/parse/lex_conf.re"
	{ lex_conf_enc(Enc::EBCDIC, opts); return; }
